# textual-calculator-poetry

./: LICENSE  README.md  pyproject.toml
textual_calculator/: calculator.py
